k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: startupintel
  labels:
    name: startupintel
    app: startupintel
